# ChangeLog for dev-java/microba
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/microba/ChangeLog,v 1.7 2007/03/02 19:16:28 nixnut Exp $

  02 Mar 2007; nixnut <nixnut@gentoo.org> microba-0.4.3.ebuild:
  Stable on ppc wrt bug 154366

  28 Feb 2007; Simon Stelling <blubb@gentoo.org> microba-0.4.3.ebuild:
  stable on amd64; bug 154366

  26 Jan 2007; Krzysiek Pawlik <nelchael@gentoo.org> microba-0.4.3.ebuild:
  Added ~ppc.

  25 Jan 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  microba-0.4.3.ebuild:
  Added ~amd64 keyword

  29 Dec 2006; <fauli@gentoo.org> microba-0.4.3.ebuild:
  stable on x86, bug #154336

  27 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> microba-0.4.3.ebuild:
  HOMEPAGE can't use bash variables.

*microba-0.4.3 (28 Oct 2006)

  28 Oct 2006; Vlastimil Babka <caster@gentoo.org> +metadata.xml,
  +microba-0.4.3.ebuild:
  Initial ebuild, based on contributed ebuild from Christian Faulhammer
  <opfer@gentoo.org> as jabref dependency in bug #122085.
