@@ -1,0 +1,3 @@
+MD5 2731ec1963aad3796d9d9f9c34182749 microba-0.4.4-full.zip 631831
+RMD160 98c3028692dd75f03f4aec0eb8cab02b49c2686b microba-0.4.4-full.zip 631831
+SHA256 33c3779dd243d7415b137dff5d15d292589390b08f398f77fef581099aa1b5c8 microba-0.4.4-full.zip 631831
