@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/microba
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/microba/ChangeLog,v 1.7 2007/03/02 19:16:28 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/microba/ChangeLog,v 1.8 2007/04/14 22:22:49 betelgeuse Exp $
+
+*microba-0.4.4 (14 Apr 2007)
+
+  14 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> +microba-0.4.4.ebuild:
+  Version bump with fixes for JAVA_PKG_STRICT.
 
   02 Mar 2007; nixnut <nixnut@gentoo.org> microba-0.4.3.ebuild:
   Stable on ppc wrt bug 154366
